--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,114 @@
-body {
+
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;700;900&display=swap');
+
+*{
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+body{
+
+  font-family: 'Outfit', sans-serif;
+}
+
+p{
+  font-size: 1.4rem;
+  font-weight: 200;
+}
+
+h1{
+  font-size: 6rem;
+}
+
+.app{
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+
+}
+
+.app:before{
+  content:'';
+  background: url("./assets/ms-how-blur-bg-cover.jpeg") no-repeat center center/cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  
+}
+
+.container{
+  max-width: 700px;
+  height: 550px;
+
+  margin: auto;
+  padding: 0 1rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  top: 10%;
+
+}
+
+.app .description{
+  position: relative;
+  right: -90%;
+  transform-origin: 0 0;
+  transform: rotate(269deg);
+
+}
+
+.app .bottom{
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  width: 100%;
+  padding: 1rem;
+  border-radius: 12px;
+  background-color: rgba(58, 58, 58, 0.7);
+
+}
+
+.bold{
+
+  font-weight: 500;
+
+}
+
+.small{
+  font-weight: 500;
+  font-size: 15px;
+}
+
+.app .search{
+  text-align: center;
+  position: relative;
+  top: 1%;
+
+  
+}
+
+.app input{
+  width: 250px;
+  height: 50px;
+  padding: 1rem;
+  text-align: left;
+  font-size: 1.2rem;
+  border-radius: 25px;
+  border: none;
+  background: rgba(255, 255, 255, 0.2);
+  color: orange;
+ 
+
+}
+
+::placeholder{
+  color: antiquewhite;
 }
