--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,7 @@ h1{
   text-align: center;
   width: 100%;
   padding: 1rem;
+  margin: 1rem auto;
   border-radius: 12px;
   background-color: rgba(58, 58, 58, 0.7);
 
